log
Tue 21 Mar 2023 11:52:52 PM UTC: 
 tests:  0|6
total_score: 0/70
bd5a0c1
Thu 23 Mar 2023 03:54:02 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fe2c4fc
Thu 23 Mar 2023 04:01:08 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f5d1109
Thu 23 Mar 2023 04:04:10 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:38:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   38 |   scanf("%i", &dato);
      |   ^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
39b655b
Thu 23 Mar 2023 04:07:25 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
7454b00
Thu 23 Mar 2023 04:17:02 PM UTC: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
2367707
Thu 23 Mar 2023 04:18:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4e2749d
Thu 23 Mar 2023 04:22:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d07d99e
Thu 23 Mar 2023 04:26:12 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
df9b0cf
Thu 23 Mar 2023 04:27:36 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d75f1ee
Thu 23 Mar 2023 06:04:58 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
c8ad448
Thu 23 Mar 2023 06:09:16 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
832a217
Thu 23 Mar 2023 06:12:47 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:20: error: ‘*(Node *)malloc (24).data’ is used uninitialized [-Werror=uninitialized]
   41 |     list -> head = createNode(list -> head -> data);
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c653a7c
Thu 23 Mar 2023 06:13:03 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
ac1bb4a
Thu 23 Mar 2023 06:13:43 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
093d1cb
Thu 23 Mar 2023 07:15:17 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:46:11: error: unused variable ‘nuevonodo’ [-Werror=unused-variable]
   46 |     Node *nuevonodo = malloc(sizeof(Node));
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
35199ac
Thu 23 Mar 2023 07:15:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
82cad39
Thu 23 Mar 2023 07:34:21 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
5cea625
Thu 23 Mar 2023 07:41:41 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:53:28: error: ‘*nuevonodo.data’ is used uninitialized [-Werror=uninitialized]
   53 |     return(list -> current -> data);
      |           ~~~~~~~~~~~~~~~~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b089749
Thu 23 Mar 2023 07:42:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘nextList’:
list.c:50:23: error: ‘nuevonodo’ is used uninitialized [-Werror=uninitialized]
   50 |     Node *nuevonodo = createNode(nuevonodo -> data);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b3b5023
Thu 23 Mar 2023 07:43:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:5: error: ‘nuevonodo’ undeclared (first use in this function)
   51 |     nuevonodo-> prev = list ->current;
      |     ^~~~~~~~~
list.c:51:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
430d200
Thu 23 Mar 2023 07:43:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘nextList’:
list.c:51:22: error: ‘nuevonodo’ is used uninitialized [-Werror=uninitialized]
   51 |     nuevonodo-> prev = list ->current;
      |     ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4c6439a
Thu 23 Mar 2023 07:43:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c58e771
Thu 23 Mar 2023 07:44:49 PM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:34: error: expected ‘;’ before ‘}’ token
   46 |     return (list -> head -> data)
      |                                  ^
      |                                  ;
   47 | }
      | ~                                 
Compilation failed
3a9b862
Thu 23 Mar 2023 07:44:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1bb6074
Thu 23 Mar 2023 08:00:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
2513366
Thu 23 Mar 2023 08:04:15 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:55:29: error: ‘*nuevonodo.data’ is used uninitialized [-Werror=uninitialized]
   55 |     return (list -> current -> data);
      |            ~~~~~~~~~~~~~~~~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
053e739
Thu 23 Mar 2023 08:05:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘nextList’:
list.c:50:23: error: ‘nuevonodo’ is used uninitialized [-Werror=uninitialized]
   50 |     Node *nuevonodo = createNode(nuevonodo-> data);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dad5d71
Thu 23 Mar 2023 08:06:09 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
test.c: In function ‘nextList’:
list.c:51:29: error: ‘nuevonodo’ is used uninitialized [-Werror=uninitialized]
   51 |     list -> current -> next = nuevonodo;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0570e32
Thu 23 Mar 2023 08:07:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b3070cd
Thu 23 Mar 2023 08:07:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
8ea787d
Thu 23 Mar 2023 08:07:52 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
6aab048
